--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -105,7 +105,7 @@
                             android:layout_height="wrap_content"
                             android:backgroundTint="@color/colorAuthText"
                             android:hint="Password"
-                            android:inputType="text"
+                            android:inputType="textWebPassword"
                             android:textColor="@color/cardview_dark_background"
                             android:textSize="@dimen/_12ssp" />
 
@@ -129,7 +129,7 @@
                             android:layout_height="wrap_content"
                             android:backgroundTint="@color/colorAuthText"
                             android:hint="Password repeat"
-                            android:inputType="text"
+                            android:inputType="textWebPassword"
                             android:textColor="@color/cardview_dark_background"
                             android:textSize="@dimen/_12ssp" />
 
