--- a/app/src/main/res/layout/item_questionnaire_list.xml
+++ b/app/src/main/res/layout/item_questionnaire_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <com.loopeer.shadow.ShadowView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,8 +15,7 @@
     app:shadowColor="@color/warm_grey"
     app:shadowMargin="@dimen/_8sdp"
     app:shadowRadius="@dimen/_8sdp"
-    tools:targetApi="lollipop"
-    >
+    tools:targetApi="lollipop">
 
 
     <LinearLayout
