--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -97,10 +97,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
         android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginTop="@dimen/_8sdp"
-        android:text="Save login"
+        android:text="@string/save_login"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="@+id/rememberCheckBox"
         app:layout_constraintStart_toEndOf="@+id/rememberCheckBox"
@@ -134,7 +133,7 @@
         android:gravity="center"
         android:inputType="textPersonName"
         android:onClick="register"
-        android:text="Create New Account?"
+        android:text="@string/create_new_account"
         android:textAllCaps="false"
         android:textColor="@color/material_drawer_dark_header_selection_text"
         android:textSize="@dimen/_9ssp"
@@ -151,7 +150,7 @@
         android:gravity="center"
         android:inputType="textPersonName"
         android:onClick="forgot"
-        android:text="Forgot your password?"
+        android:text="@string/forgot_your_password"
         android:textColor="@color/material_drawer_dark_header_selection_text"
         android:textSize="@dimen/_9ssp"
         android:visibility="visible"
