--- a/app/src/main/res/layout/activity_event_finder.xml
+++ b/app/src/main/res/layout/activity_event_finder.xml
@@ -86,7 +86,7 @@
                 android:layout_marginRight="@dimen/_8sdp"
                 android:layout_weight="1"
                 android:background="@drawable/custom_btn"
-                android:text="FAVORITE"
+                android:text="@string/favorite"
                 android:textColor="@color/colorAuthText"
                 android:textSize="@dimen/_10ssp"
                 android:textStyle="bold" />
@@ -105,7 +105,7 @@
                 android:layout_marginRight="@dimen/_8sdp"
                 android:layout_weight="1"
                 android:background="@drawable/custom_btn"
-                android:text="ALL EVENTS"
+                android:text="@string/all_events"
                 android:textColor="@color/colorAuthText"
                 android:textSize="@dimen/_10sdp"
                 android:textStyle="bold" />
@@ -124,7 +124,7 @@
                 android:layout_marginLeft="@dimen/_8sdp"
                 android:layout_weight="1"
                 android:background="@drawable/custom_btn"
-                android:text="MY EVENTS"
+                android:text="@string/my_events"
                 android:textColor="@color/colorAuthText"
                 android:textSize="@dimen/_10sdp"
                 android:textStyle="bold" />
@@ -155,7 +155,7 @@
             android:layout_marginEnd="@dimen/_8sdp"
             android:background="@drawable/custom_btn"
             android:padding="@dimen/_8sdp"
-            android:text="Create New Event"
+            android:text="@string/create_new_event_sec"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@color/colorAuthText"
@@ -177,5 +177,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />>
+        app:layout_constraintTop_toTopOf="parent" />
 </LinearLayout>
