--- a/app/src/main/res/layout/activity_graphic.xml
+++ b/app/src/main/res/layout/activity_graphic.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="DEMO"
+        android:text="@string/demo"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
