--- a/app/src/main/res/layout/activity_questions_creation.xml
+++ b/app/src/main/res/layout/activity_questions_creation.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Press + to add new question"
+        android:text="@string/press_to_add_new_question"
         android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +106,7 @@
             android:layout_weight="1"
             android:background="@drawable/custom_btn"
             android:onClick="handleBtnCreate"
-            android:text="Next"
+            android:text="@string/next"
             android:textAlignment="center"
             android:textColor="@color/colorAuthText"
             android:textSize="@dimen/_9ssp"
