--- a/app/src/main/res/layout/fragment_chat_tab.xml
+++ b/app/src/main/res/layout/fragment_chat_tab.xml
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="12"
-                    android:hint="Write message"
+                    android:hint="@string/write_message"
                     android:inputType="textPersonName"
                     android:textColor="@color/cardview_dark_background" />
 
@@ -64,6 +64,10 @@
                 android:id="@+id/messagesList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/custom_btn_dark"
                 android:padding="8dp" />
 
 
