--- a/app/src/main/res/layout/item_event_card.xml
+++ b/app/src/main/res/layout/item_event_card.xml
@@ -22,12 +22,15 @@
             android:id="@+id/tv_header_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:text="TextView"
             android:textColor="@color/cardview_dark_background"
             android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/tv_star"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,6 +73,17 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/tv_owner_card"
             app:layout_constraintTop_toTopOf="@+id/tv_owner_card" />
+
+        <ImageButton
+            android:id="@+id/tv_star"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/star_unpressed"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_date_card"
