--- a/app/src/main/res/layout/item_password_werification.xml
+++ b/app/src/main/res/layout/item_password_werification.xml
@@ -17,7 +17,7 @@
             android:layout_marginEnd="@dimen/_8sdp"
             android:layout_marginStart="@dimen/_8sdp"
             android:gravity="center"
-            android:text="Enter the passwort to Event"
+            android:text="@string/enter_the_passwort_to_event"
             android:textColor="@color/cardview_dark_background"
             android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
@@ -45,7 +45,7 @@
                 android:layout_marginEnd="@dimen/_16sdp"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:ems="10"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:textColor="@color/colorDarkBlue"
                 android:textSize="@dimen/_14ssp" />
@@ -66,7 +66,7 @@
                 android:layout_margin="@dimen/_16sdp"
                 android:layout_weight="1"
                 android:background="@drawable/custom_btn_dark"
-                android:text="Cancel"
+                android:text="@string/cancel"
                 android:textAllCaps="false"
                 android:textColor="@color/cardview_dark_background"
                 android:textStyle="bold"
@@ -84,7 +84,7 @@
                 android:layout_margin="@dimen/_16sdp"
                 android:layout_weight="1"
                 android:background="@drawable/custom_btn_dark"
-                android:text="Enter"
+                android:text="@string/enter"
                 android:textAllCaps="false"
                 android:textColor="@color/cardview_dark_background"
                 android:textStyle="bold"
