--- a/app/src/main/res/layout/item_question_questionnarie_answer.xml
+++ b/app/src/main/res/layout/item_question_questionnarie_answer.xml
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:text="Question"
+                android:text="@string/question"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -50,7 +50,7 @@
                     android:id="@+id/checkBox_place"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="CheckBox" />
+                    android:text="@string/checkbox" />
             </LinearLayout>
 
             <LinearLayout
@@ -72,7 +72,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="RadioButton" />
+                        android:text="@string/radiobutton" />
                 </RadioGroup>
 
             </LinearLayout>
@@ -92,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:focusable="auto"
-                    android:hint="PLASE ANSWER HERE"
+                    android:hint="@string/plase_answer_here"
                     android:inputType="textPersonName"
                     android:textColor="@color/colorDarkBlue"
                     android:textSize="14sp" />
