--- a/app/src/main/res/layout/activity_questions_creation.xml
+++ b/app/src/main/res/layout/activity_questions_creation.xml
@@ -20,7 +20,7 @@
         app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvHint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
