--- a/app/src/main/res/layout/activity_graphic.xml
+++ b/app/src/main/res/layout/activity_graphic.xml
@@ -5,56 +5,82 @@
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back_ground_img_login"
     tools:context="com.qit.android.activity.GraphicActivity">
 
-    <TextView
-        android:id="@+id/header_text_graphic"
-        android:layout_width="wrap_content"
+    <com.loopeer.shadow.ShadowView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/demo"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:layout_marginTop="32dp"
+        android:elevation="@dimen/_8sdp"
+        android:foreground="?attr/selectableItemBackground"
+        android:orientation="vertical"
+        app:cornerRadiusBL="@dimen/_14sdp"
+        app:cornerRadiusBR="@dimen/_14sdp"
+        app:cornerRadiusTL="@dimen/_14sdp"
+        app:cornerRadiusTR="@dimen/_14sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ScrollView
-        android:id="@+id/scroll_graphics"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header_text_graphic">
+        app:layout_constraintTop_toTopOf="parent"
+        app:shadowColor="@color/warm_grey"
+        app:shadowMargin="@dimen/_8sdp"
+        app:shadowRadius="@dimen/_8sdp"
+        tools:targetApi="lollipop">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="16dp">
 
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/chart"
+            <TextView
+                android:id="@+id/header_text_graphic"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/demo"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/header_text_graphic" />
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/header_text_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_weight="1"
+                android:text="TextView" />
+        </LinearLayout>
+    </com.loopeer.shadow.ShadowView>
+
+    <ScrollView
+        android:id="@+id/scroll_graphics"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:id="@+id/pieLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="104dp">
+
         </LinearLayout>
     </ScrollView>
 
