--- a/app/src/main/res/layout/activity_questionnaire_creation.xml
+++ b/app/src/main/res/layout/activity_questionnaire_creation.xml
@@ -201,7 +201,8 @@
                                 android:orientation="horizontal"
                                 android:paddingLeft="20dp"
                                 android:paddingRight="32dp"
-                                android:paddingTop="15dp">
+                                android:paddingTop="15dp"
+                                android:visibility="gone">
 
                                 <ImageView
                                     android:id="@+id/imageView4"
@@ -239,7 +240,8 @@
                                 android:orientation="horizontal"
                                 android:paddingLeft="20dp"
                                 android:paddingRight="32dp"
-                                android:paddingTop="15dp">
+                                android:paddingTop="15dp"
+                                android:visibility="gone">
 
                                 <ImageView
                                     android:id="@+id/imageView5"
