--- a/app/src/main/res/layout/item_ask_for_event_entrance.xml
+++ b/app/src/main/res/layout/item_ask_for_event_entrance.xml
@@ -10,47 +10,20 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textView99"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_8sdp"
             android:layout_marginStart="@dimen/_8sdp"
             android:gravity="center"
-            android:text="@string/enter_the_passwort_to_event"
+            android:text="Do you want to ask administrator for event entrance ?"
             android:textColor="@color/cardview_dark_background"
             android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilLoginPAswItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:textColorHint="@color/cardview_dark_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgLogo">
-
-            <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/password_edit_text_to_event"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginEnd="@dimen/_16sdp"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:ems="10"
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:textColor="@color/colorDarkBlue"
-                android:textSize="@dimen/_14ssp" />
-
-        </android.support.design.widget.TextInputLayout>
 
 
         <LinearLayout
